--- a/MercadoLibre_ExploratoryAnalysis.ipynb
+++ b/MercadoLibre_ExploratoryAnalysis.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root= 'C:/Users/PauloAlves/Documents/Pessoais/MercadoLibre/'"
+    "root_folder= 'C:/Users/PauloAlves/Documents/Pessoais/MercadoLibre/'"
    ]
   },
   {
@@ -77,6 +77,13 @@
    "metadata": {},
    "source": [
     "## 03. Webscrapping and DataStrucuture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Vaya al capítulo 4 si no desea ejecutar webscrapping + estructuración"
    ]
   },
   {
@@ -272,6 +279,25 @@
    "metadata": {},
    "source": [
     "# 04. Analises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_tv = pd.read_csv(root_folder + \"01. Data/dados_tv.csv\")\n",
+    "final_tv_id = pd.read_csv(root_folder + \"01. Data/dados_tv_id.csv\")\n",
+    "\n",
+    "final_nb = pd.read_csv(root_folder + \"01. Data/dados_notebook.csv\")\n",
+    "final_nb_id = pd.read_csv(root_folder + \"01. Data/dados_notebook_id.csv\")\n",
+    "\n",
+    "final_cp = pd.read_csv(root_folder + \"01. Data/dados_celular.csv\")\n",
+    "final_cp_id = pd.read_csv(root_folder + \"01. Data/dados_celular_id.csv\")\n",
+    "\n",
+    "final_sw = pd.read_csv(root_folder + \"01. Data/dados_sw.csv\")\n",
+    "final_sw_id = pd.read_csv(root_folder + \"01. Data/dados_sw_id.csv\")"
    ]
   },
   {
